--- a/package.json
+++ b/package.json
@@ -55,13 +55,14 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.8",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -84,8 +85,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "ipaddr.js": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
