--- a/tsconfig.backend.json
+++ b/tsconfig.backend.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ES2020",
     "target": "ES2020",
     "lib": ["ES2020"],
     "outDir": "./dist/backend",
