--- a/src/backend/scripts/install-spoke-linux.sh.template
+++ b/src/backend/scripts/install-spoke-linux.sh.template
@@ -6,7 +6,8 @@ set -e
 
 # Embedded configuration (replaced by ScriptGenerator)
 TOKEN="{{TOKEN}}"
-HUB_ENDPOINT="{{HUB_ENDPOINT}}"
+HUB_PUBLIC_ENDPOINT="{{HUB_PUBLIC_ENDPOINT}}"
+HUB_PRIVATE_ENDPOINT="{{HUB_PRIVATE_ENDPOINT}}"
 HUB_PUBLIC_KEY="{{HUB_PUBLIC_KEY}}"
 SPOKE_IP="{{SPOKE_IP}}"
 NETWORK_CIDR="{{NETWORK_CIDR}}"
@@ -18,6 +19,32 @@ echo "===== WireGuard Spoke Installation - Linux ====="
 echo "Spoke: $SPOKE_NAME"
 echo "Allocated IP: $SPOKE_IP"
 echo ""
+
+# Auto-detect best endpoint (private if reachable, otherwise public)
+detect_endpoint() {
+  echo "Detecting best endpoint..."
+
+  # Extract hostname/IP and port from private endpoint
+  if [ -n "$HUB_PRIVATE_ENDPOINT" ]; then
+    PRIVATE_HOST=$(echo "$HUB_PRIVATE_ENDPOINT" | cut -d: -f1)
+    PRIVATE_PORT=$(echo "$HUB_PRIVATE_ENDPOINT" | cut -d: -f2)
+
+    # Test if private endpoint is reachable (timeout 2 seconds)
+    if timeout 2 bash -c "cat < /dev/null > /dev/tcp/$PRIVATE_HOST/$PRIVATE_PORT" 2>/dev/null; then
+      echo "✓ Private endpoint reachable: $HUB_PRIVATE_ENDPOINT"
+      HUB_ENDPOINT="$HUB_PRIVATE_ENDPOINT"
+      return
+    else
+      echo "⚠ Private endpoint not reachable: $HUB_PRIVATE_ENDPOINT"
+    fi
+  fi
+
+  # Fall back to public endpoint
+  echo "✓ Using public endpoint: $HUB_PUBLIC_ENDPOINT"
+  HUB_ENDPOINT="$HUB_PUBLIC_ENDPOINT"
+}
+
+detect_endpoint
 
 # Detect Linux distribution
 detect_distro() {
