--- a/src/backend/scripts/install-spoke-proxmox.sh.template
+++ b/src/backend/scripts/install-spoke-proxmox.sh.template
@@ -6,7 +6,8 @@ set -e
 
 # Embedded configuration (replaced by ScriptGenerator)
 TOKEN="{{TOKEN}}"
-HUB_ENDPOINT="{{HUB_ENDPOINT}}"
+HUB_PUBLIC_ENDPOINT="{{HUB_PUBLIC_ENDPOINT}}"
+HUB_PRIVATE_ENDPOINT="{{HUB_PRIVATE_ENDPOINT}}"
 HUB_PUBLIC_KEY="{{HUB_PUBLIC_KEY}}"
 SPOKE_IP="{{SPOKE_IP}}"
 NETWORK_CIDR="{{NETWORK_CIDR}}"
@@ -18,6 +19,79 @@ echo "===== Proxmox VE WireGuard Installation ====="
 echo "Spoke: $SPOKE_NAME"
 echo "Allocated IP: $SPOKE_IP"
 echo ""
+
+# Auto-detect best endpoint (private if reachable, otherwise public)
+detect_endpoint() {
+  echo "Detecting best endpoint..."
+
+  # Extract hostname/IP and port from private endpoint
+  if [ -n "$HUB_PRIVATE_ENDPOINT" ]; then
+    PRIVATE_HOST=$(echo "$HUB_PRIVATE_ENDPOINT" | cut -d: -f1)
+    PRIVATE_PORT=$(echo "$HUB_PRIVATE_ENDPOINT" | cut -d: -f2)
+
+    # Test if private endpoint is reachable via UDP (WireGuard uses UDP)
+    if command -v nc &> /dev/null; then
+      if timeout 2 nc -u -z -w 1 "$PRIVATE_HOST" "$PRIVATE_PORT" &>/dev/null; then
+        echo "✓ Private endpoint reachable: $HUB_PRIVATE_ENDPOINT"
+        HUB_ENDPOINT="$HUB_PRIVATE_ENDPOINT"
+        return
+      else
+        echo "⚠ Private endpoint not reachable via UDP: $HUB_PRIVATE_ENDPOINT"
+      fi
+    else
+      if ping -c 1 -W 2 "$PRIVATE_HOST" &>/dev/null; then
+        echo "✓ Private endpoint host reachable (UDP test skipped): $HUB_PRIVATE_ENDPOINT"
+        HUB_ENDPOINT="$HUB_PRIVATE_ENDPOINT"
+        return
+      else
+        echo "⚠ Private endpoint host not reachable: $HUB_PRIVATE_ENDPOINT"
+      fi
+    fi
+  fi
+
+  # Test public endpoint before accepting it
+  PUBLIC_HOST=$(echo "$HUB_PUBLIC_ENDPOINT" | cut -d: -f1)
+  PUBLIC_PORT=$(echo "$HUB_PUBLIC_ENDPOINT" | cut -d: -f2)
+
+  echo "Testing public endpoint: $HUB_PUBLIC_ENDPOINT"
+
+  # Check DNS resolution first
+  if ! getent hosts "$PUBLIC_HOST" &>/dev/null && ! host "$PUBLIC_HOST" &>/dev/null; then
+    echo ""
+    echo "❌ ERROR: Cannot resolve hostname '$PUBLIC_HOST'"
+    echo ""
+    echo "Troubleshooting steps:"
+    echo "  1. Check DNS resolution: nslookup $PUBLIC_HOST"
+    echo "  2. Update hub configuration to use your public IP instead"
+    echo "     Example: 203.0.113.5:51820 instead of testing.prfmv.com:51820"
+    echo "  3. Alternatively, set up proper DNS for '$PUBLIC_HOST'"
+    echo ""
+    exit 1
+  fi
+
+  # Test UDP connectivity if available
+  if command -v nc &> /dev/null; then
+    if timeout 2 nc -u -z -w 1 "$PUBLIC_HOST" "$PUBLIC_PORT" &>/dev/null; then
+      echo "✓ Public endpoint reachable: $HUB_PUBLIC_ENDPOINT"
+      HUB_ENDPOINT="$HUB_PUBLIC_ENDPOINT"
+    else
+      echo "⚠ Warning: Cannot verify UDP connectivity to $HUB_PUBLIC_ENDPOINT"
+      echo "  Proceeding anyway - WireGuard will attempt connection"
+      HUB_ENDPOINT="$HUB_PUBLIC_ENDPOINT"
+    fi
+  else
+    if ping -c 1 -W 2 "$PUBLIC_HOST" &>/dev/null; then
+      echo "✓ Public endpoint host reachable: $HUB_PUBLIC_ENDPOINT"
+      HUB_ENDPOINT="$HUB_PUBLIC_ENDPOINT"
+    else
+      echo "❌ ERROR: Cannot reach public endpoint at $HUB_PUBLIC_ENDPOINT"
+      echo "Check firewall and WireGuard service status"
+      exit 1
+    fi
+  fi
+}
+
+detect_endpoint
 
 # Detect Proxmox environment
 detect_proxmox() {
